# Nox

./: .lgtm.yml  ATTRIBUTION_GUIDELINES.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT_GUIDELINES.md  README.md  REVERSE_ENGINEERING_POLICY.md  meson.build  meson_options.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  codeql.yml
docs/: N5305A.md  misc.md  nox-gui.md
etc/: config.hh.in  dhcpd.conf  meson.build  setup-interface.sh
etc/dissectors/: n5305a_broadcast.lua  n5305a_icmpctl.lua  n5305a_metadata.lua  n5305a_protocol_analyzer.lua
etc/dissectors/n5305a/: dissector.c  dissector.h  dissectors.h  dissectors.hh  frameDissector.c  frameDissector.cc  frameDissector.cxx  frameDissector.h  frameFields.h  frameFields.hh  meson.build  n5305a.c  n5305a.cc  n5305a.cxx  transactDissector.c  transactDissector.cc  transactionFields.h  transactionFields.hh
src/: meson.build
src/dissectors/: meson.build  n5305a_protocol_analyzer.lua
src/dissectors/n5305a/: common.hh  dissectors.hh  frameDissector.cc  frame_dissector.cc  frame_reassembly.cc  frame_reassembly.hh  meson.build  n5305a.cc  transactDissector.cc  transact_dissector.cc  transaction_dissector.cc  transaction_dissector.hh  transaction_reassembly.hh
src/dissectors/nox/: meson.build
src/dissectors/nox/example_dissector/: example.cc  meson.build
src/dissectors/wireshark/: BUILDING_ON_WINDOWS.md  meson.build
src/dissectors/wireshark/n5305a/: CMakeLists.txt  frame_reassembly.hh  n5305a.cc  transaction_dissector.cc  transaction_dissector.hh  transaction_reassembly.cc  transaction_reassembly.hh
src/libnox/: meson.build
src/libnox/analyzer/: meson.build
src/libnox/include/: meson.build
src/libnox/include/analyzer/: meson.build
src/libnox/include/analyzer/Agilent/: meson.build
src/libnox/include/core/: meson.build  module.hh  module_loader.hh
src/libnox/include/dissector/: meson.build
src/libnox/include/exerciser/: meson.build
src/libnox/include/exerciser/Agilent/: meson.build
src/libnox/include/interface/: meson.build
src/libnox/include/interface/Agilent/: meson.build
src/libnox/include/internal/: defs.hh  fs.hh  meson.build
src/libnox/include/protocol/: meson.build
src/libnox/include/protocol/PCIe/: meson.build
src/libnox/include/protocol/PCIe/gen1/: meson.build
src/libnox/include/protocol/PCIe/gen2/: meson.build
src/libnox/include/protocol/PCIe/gen3/: meson.build
src/libnox/include/protocol/PCIe/gen4/: meson.build
src/libnox/interface/Agilent/: meson.build
src/libnox/protocol/: meson.build
src/libnox/protocol/PCIe/: meson.build
src/nox-cli/: meson.build  nox-cli.cc
src/nox-cli/include/: meson.build
src/nox-gui/: meson.build  nox-gui.cc
src/nox-gui/i18n/: en_US.ts  meson.build
src/nox-gui/include/: meson.build
src/nox-gui/include/models/: meson.build
src/nox-gui/include/ui/: main_window.hh  meson.build
src/nox-gui/models/: meson.build
src/nox-gui/qrc/: meson.build
src/nox-gui/qrc/themes/: meson.build
src/nox-gui/ui/: main_window.cc  main_window.ui  meson.build
subprojects/: .gitignore  libnokogiri.wrap  substrate.wrap
